# nub

./: .gitattributes  .gitignore  AGENTS.md  CODEX.md  Cargo.toml  Cross.toml  Makefile  PROSE.md  README.md  flake.nix  hawk.toml  install.ps1  install.sh  package.json  pnpm-lock.yaml  wiki
.claude/: settings.json
.claude/hooks/: fray-notify-surface.mjs  gh-comment-guard.mjs
.githooks/: commit-msg  pre-commit
.github/scripts/: check-commit-hygiene.mjs  gen-homebrew-formula.sh  smoke.sh
.github/workflows/: bench-adhoc.yml  ci.yml  commit-hygiene.yml  daily-driver.yml  docker.yml  flake-fifty-windows-probe.yml  native-deps.yml  nix.yml  node-flag-drift.yml  node-matrix.yml  pnpm-conformance.yml  release.yml  sandbox-conformance.yml  sandbox-macos-envread-matrix.yml  sandbox-pr-compile.yml  sandbox-win-adversarial.yml  sandbox-win-enforcement.yml  sandbox-win-probes.yml  test-install.yml  trunk-red.yml  verify-install.yml  win-appcontainer-probe.yml  win-lpac-probe.yml  winget-validate.yml  wpt-worker.yml
benchmarks/: README.md
benchmarks/multi-file/: entry.ts  mod1.ts  mod10.ts  mod100.ts  mod11.ts  mod12.ts  mod13.ts  mod14.ts  mod15.ts  mod16.ts  mod17.ts  mod18.ts  mod19.ts  mod2.ts  mod20.ts  mod21.ts  mod22.ts  mod23.ts  mod24.ts  mod25.ts  mod26.ts  mod27.ts  mod28.ts  mod29.ts  mod3.ts  mod30.ts  mod31.ts  mod32.ts  mod33.ts  mod34.ts  mod35.ts  mod36.ts  mod37.ts  mod38.ts  mod39.ts  mod4.ts  mod40.ts  mod41.ts  mod42.ts  mod43.ts  (+61 more)
crates/nub-cache-key/: Cargo.toml
crates/nub-cli/: Cargo.toml  build.rs
crates/nub-cli/src/: cli.rs  config.rs  dynamic_phantom.rs  init.rs  main.rs  nubx_consent.rs  nubx_resolve.rs  phantom_scan.rs  project_config.rs  self_shim.rs  shell_emulator.rs  verify_deps.rs
crates/nub-cli/src/agent/: mod.rs
crates/nub-cli/src/pm_engine/: config_scope.rs  expo_compat.rs  identity.rs  info_family.rs  install_family.rs  log.rs  min_release_age.rs  mod.rs  output.rs  phantom_closure.rs  present.rs  publish_family.rs  resource_limits.rs  store_config_family.rs  unsupported_config.rs  use_align.rs  use_nub.rs  vite_compat.rs
crates/nub-cli/tests/: abort_eagerly.rs  bun_basic_config.rs  cli_grammar_parity.rs  html_rewriter.rs  init_cmd.rs  install_engine.rs  integration.rs  lockfile_rename.rs  node_compat.rs  node_shim.rs  nubx_passthrough.rs  package_extensions.rs  pdeath_watch.rs  pdeathsig.rs  pm_augment.rs  pm_identity.rs  pm_publish_store_config.rs  pm_shim.rs  pm_two_mode.rs  pm_verbs.rs  process_versions_nub.rs  reentry_verbs.rs  resolution_compat.rs  sandbox_conformance.rs  self_shim.rs  shell_emulator.rs  target_passthrough.rs  upgrade_windows.rs  verify_deps.rs  version_tiers.rs  workspace_run.rs
crates/nub-cli/tests/sandbox_conformance/: env-scrub-auth.json  fs-generous-read-secrets.json  fs-read-confine.json  fs-windows-relative-canon.json  fs-write-confine.json  net-coarse-deny.json
crates/nub-core/: Cargo.toml  build.rs
crates/nub-core/src/: lib.rs
crates/nub-core/src/node/: discovery.rs  feature_matrix.rs  flags.rs  mod.rs  runtime_cache.rs  shim.rs  spawn.rs  version.rs
crates/nub-core/src/pm/: extract.rs  mod.rs  provision.rs  registry.rs  resolve.rs  shim.rs
crates/nub-core/src/version_management/: download.rs  extract.rs  manage.rs  mod.rs  node_index.rs
crates/nub-core/src/workspace/: detect.rs  env.rs  filter.rs  mod.rs  scripts.rs  shell_escape.rs
crates/nub-native/: Cargo.toml  build.rs
crates/nub-native/src/: cache.rs  detect.rs  lib.rs  resolve.rs  rewrite.rs  transform.rs  tsconfig.rs  worker_rewrite.rs
crates/nub-phantom/: Cargo.toml  README.md
crates/nub-phantom-core/: Cargo.toml
crates/nub-phantom-core/src/: builtins.rs  extract.rs  lib.rs  specifier.rs
crates/nub-phantom-scan/: Cargo.toml
crates/nub-phantom-scan/src/: classify.rs  graph.rs  lib.rs  manifest.rs
crates/nub-phantom/examples/: scan_both.rs
crates/nub-phantom/src/: classify.rs  extract.rs  fetch.rs  graph.rs  lib.rs  main.rs  manifest.rs
crates/nub-sandbox/: Cargo.toml  EMBEDDER.md  LIMITATIONS.md  NOTICE
crates/nub-sandbox/examples/: jail_run.rs
crates/nub-sandbox/src/: build_jail.rs  conformance.rs  lib.rs  net_defaults.rs  policy.rs  script_sandbox.rs  secrets.rs
crates/nub-sandbox/src/backend/: linux.rs  linux_connect_notify.rs  linux_grants.rs  macos.rs  macos_seatbelt_base.sbpl  mod.rs  stub.rs  windows.rs
crates/nub-sandbox/src/compiler/: clobber.rs  defaults.rs  env_grammar.rs  fold.rs  layering.rs  mod.rs  preset.rs  resolve.rs  scope.rs
crates/nub-sandbox/src/matcher/: host.rs  mod.rs  path.rs
crates/nub-sandbox/src/proxy/: ca.rs  handshake.rs  mitm.rs  mod.rs  sni.rs
crates/nub-sandbox/tests/: compiler.rs  e2e_linux.rs  e2e_macos.rs  e2e_prefetch_macos.rs  ir.rs  layering.rs  linux_enforcement.rs  linux_mitm.rs  linux_proxy.rs  macos_enforcement.rs  macos_envread.rs  macos_moveblock.rs  macos_proxy.rs  matcher.rs  proxy.rs  resolution.rs  windows_adversarial.rs  windows_ascendant_env.rs  windows_enforcement.rs  windows_residuals.rs
crates/nub-sandbox/tests/build-jail/: README.md
crates/nub-sandbox/tests/common/: mod.rs
crates/nub-worker-resolve/: Cargo.toml
crates/nub-worker-resolve/src/: lib.rs
docker/: Dockerfile.linux
npm/: build-local.sh
research/: native-http-transport.md
runtime/: cache-evict.mjs  compile-cache-restore.mjs  html-rewriter.mjs  navigator-locks.mjs  navigator-shim.mjs  polyfills.cjs  preload-async-hooks.mjs  preload-common.cjs  preload.cjs  preload.mjs  transform-core.mjs  version.mjs  watch-env-guard.cjs  worker-blob-url.cjs  worker-polyfill.mjs
scripts/: check-node-flag-drift.mjs  ci-watch.test.mjs  ci-watch.ts  download-stats.mjs  merge-cascade.test.mjs  merge-cascade.ts  new-worktree.ts  node-flag-inventory.mjs  node-flag-inventory.snapshot.json  rust-build.sh  statusline-decisions.sh
setup/: DESIGN.md
site/: .gitignore  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
tests/: node-compat-config.jsonc  run-node-compat.sh
tests/win-lpac/: Cargo.toml
tests/win-lpac/src/: main.rs
winget/: README.md
(+479 files in other folders)
