[package]
name = "nub-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nub"
path = "src/main.rs"

[features]
# Single self-contained binary: embed the `runtime/` tree as a compressed blob and
# JIT-extract it on first run (forwards to nub-core, where the extract module +
# build.rs blob generation live). OFF by default — the `--profile fast` dev loop
# and `make install-dev` keep walking to the in-repo `runtime/`. CI release builds
# pass `--features embed-runtime`.
embed-runtime = ["nub-core/embed-runtime"]

[dependencies]
nub-core = { path = "../nub-core" }
# Shared phantom-classification primitives (specifier extraction + guard modeling
# + builtin/name classification) for the pre-run phantom scan (src/phantom_scan.rs).
# Depends on the LEAN oxc parser subset, not the full `oxc` umbrella — see the
# crate's Cargo.toml for why that keeps the shipped CLI's build graph lean.
nub-phantom-core = { path = "../nub-phantom-core" }
# The reachable-graph phantom SCANNER (graph walk + classify) for the dynamic
# per-version scan → sidecar path (unconditionally on for users). Lean by
# construction — same oxc-parser weight as nub-phantom-core, no fetch stack. The
# `ScanResult` it defines is the sidecar payload phantom_closure deserializes.
nub-phantom-scan = { path = "../nub-phantom-scan" }
# Vendored aube (vendor/aube — plain in-tree files, vendored from nubjs/aube). aube-lockfile
# is a pure library crate (no CLI/tokio surface); `aube` is the command layer
# as a library (lib target landed in nubjs/aube@b15cdcb) — `nub install` /
# `nub ci` route through `aube::commands::install::run` in-process instead of
# shelling out. See vendor/aube/AGENTS.md and src/pm_engine/.
aube-lockfile = { path = "../../vendor/aube/crates/aube-lockfile" }
# aube-linker: nub installs a disk-materialize expansion hook (selective-subtree
# materialization) via `aube_linker::set_disk_materialize_expand_hook`; a pure
# library crate (no CLI/tokio surface), same lean-graph rationale as aube-lockfile.
aube-linker = { path = "../../vendor/aube/crates/aube-linker" }
# aube-resolver: `nub import` runs the peer-context pass (hoist_auto_installed_peers
# + apply_peer_contexts) on a bun/npm-parsed graph before writing pnpm-lock, so the
# imported lockfile carries peer suffixes the install path assumes pnpm-locks have
# (#453). Pure offline graph transforms; a lean library crate already in the graph.
aube-resolver = { path = "../../vendor/aube/crates/aube-resolver" }
aube-manifest = { path = "../../vendor/aube/crates/aube-manifest" }
# default-features = false drops aube's default set (`mimalloc`, `config-tui`),
# neither of which nub uses: aube's `config-tui` (ratatui/crossterm) only feeds
# `aube config tui`, a tool subcommand nub never dispatches (the engine is
# embedded as a library; output is rebranded through pm_engine::present), and
# aube's `mimalloc` feature only swaps the allocator in aube's own dead main.rs
# — nub sets its own mimalloc global allocator in nub-cli's main.rs. Dropping
# config-tui removes ratatui + crossterm from the binary's dependency graph.
aube = { path = "../../vendor/aube/crates/aube", default-features = false }
# `EffectiveFilter` for the workspace-aware engine verbs (`nub publish
# --filter/-r`); same type aube's own dispatch passes to publish/list/etc.
aube-workspace = { path = "../../vendor/aube/crates/aube-workspace" }
# Settings metadata (`meta::SETTINGS`): drives the npmrc-first config write
# routing in pm_engine/store_config_family.rs (npmShared flag, alias
# spellings, scalar-vs-map types).
aube-settings = { path = "../../vendor/aube/crates/aube-settings" }
# Registry URL normalization helpers for translating incumbent Bun config into
# the engine's existing `.npmrc`-shaped registry/auth model.
aube-registry = { path = "../../vendor/aube/crates/aube-registry" }
# Engine error-code constants + the bespoke exit-code table; consumed by the
# presentation layer (src/pm_engine/present.rs) for the ERR_AUBE_→ERR_NUB_
# rewrite and the cli_main-compatible exit mapping.
aube-codes = { path = "../../vendor/aube/crates/aube-codes" }
# Build-script trust policy: `enableScripts: false` (yarn) forces
# `BuildPolicy::deny_all()` to override even nub's defaultTrust floor
# (pm_engine/unsupported_config.rs). Same path-dep shape as the rest.
aube-scripts = { path = "../../vendor/aube/crates/aube-scripts" }
# Diagnostics / critical-path recorder: nub's engine_session calls diag::init()
# so AUBE_DIAG_* env vars work when nub install runs the embedded aube engine.
aube-util = { path = "../../vendor/aube/crates/aube-util" }
# Store dir resolution: the Vite compat post-install step (pm_engine/vite_compat.rs)
# reads the global virtual-store path via `aube_store::dirs::cache_dir()` (embedder
# cache_namespace-aware) to write it into `.modules.yaml`. Already a transitive dep.
aube-store = { path = "../../vendor/aube/crates/aube-store" }
# Same major + `fancy` as vendor/aube — present.rs renders the engine's
# miette::Report exactly as aube's own cli_main would, then rewrites it.
miette = { version = "7", features = ["fancy"] }
anyhow.workspace = true
base64 = "0.22"
# Global allocator for the `nub` binary only. NOT added to crates/nub-native
# (the cdylib loaded into Node) — that must not hijack Node's allocator.
mimalloc = "0.1"
clap.workspace = true
# Same major as vendor/aube: `nubx -q` switches the engine's progress UI to
# text mode via clx::progress::set_output, the same knob aube's own startup
# flips for --silent (vendor/aube/crates/aube/src/startup.rs).
clx = "2"
dirs-next.workspace = true
dotenvy = "0.15"
# `preserve_order` keeps serde_json::Map in INSERTION order (IndexMap-backed) so
# pm_engine's config rewrites (use_nub.rs, config_scope.rs, store_config_family.rs)
# preserve the user's existing key order rather than alphabetizing the file.
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
rustc-hash.workspace = true
semver = "1"
# npm-semantics range satisfaction for the pre-run dependency-freshness gate
# (verify_deps.rs). The Cargo `semver` crate above uses Cargo semantics, which
# don't match npm ranges (`x`-ranges, `||` unions, hyphen ranges); node-semver
# is the same resolver aube already uses.
node-semver = "2"
# pnpm-workspace.yaml read + regeneration for `nub pm use nub` / `use pnpm`
# (pm_engine/use_nub.rs). serde_yaml is archived/unmaintained; serde_yaml_ng
# is the maintained, API-compatible fork, aliased as `serde_yaml` so the
# source paths are unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2.workspace = true
tracing.workspace = true
tempfile = "3"
toml.workspace = true
# Comment-preserving JSONC read (serde) + read-modify-write (cst) for nub's own
# global config file (~/.config/nub/nub.jsonc, see src/config.rs).
jsonc-parser.workspace = true
console.workspace = true
# Multi-thread runtime for the embedded aube install engine (pm_engine.rs).
# Mirrors aube's own cli_main runtime shape; tokio is dormant on every other
# nub code path.
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true
url = "2.5"
# Only to SIZE the rayon GLOBAL pool under a detected PID/thread constraint
# (pm_engine::build_runtime): the embedded engine fans CAS writes / delta / fetch
# out over rayon's implicit global pool, whose lazy init spins up
# available_parallelism() threads (CPU-quota-bound, NOT PID-bound) and PANICS on
# thread-create EAGAIN — the same exit-101 abort the tokio cap closes. We cap it
# under the same headroom budget; unconstrained boxes keep rayon's default.
rayon = "1"
# CPU-budget detection (resource_limits::cpu_budget): num_cpus::get() reads the
# cgroup CFS quota (cgroup v1 `cpu.cfs_quota_us`/`cfs_period_us` AND v2 `cpu.max`,
# via /proc/self/mountinfo) and returns min(ceil(quota/period), logical_cores) —
# exactly the automaxprocs algorithm, maintained, 2-dep. Closes the v1-quota +
# affinity-blocked gaps in std's `available_parallelism()`.
num_cpus = "1"

[target.'cfg(unix)'.dependencies]
# fd-level capture of the engine's raw println/eprintln hint lines so the
# brand rewrite can reach them (pm_engine/install_family.rs::with_fd_captured).
libc.workspace = true

[target.'cfg(windows)'.dependencies]
# CRT fd-level capture (_dup/_dup2/_pipe/_read) so `with_fd_captured` works on
# Windows too — load-bearing for `config get registry`'s default-registry
# substitution, which detects the engine's `undefined` print from the capture
# (pm_engine/mod.rs::with_fd_captured). Without it the substitution silently
# breaks and the default registry is never surfaced on Windows.
libc.workspace = true
# Expand 8.3 path components before auto-discovered env files reach Node's
# Windows watcher. Node 24's bundled libuv aborts when an event path and watched
# directory use short and long spellings of the same directory.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[lints]
workspace = true
