# nub-phantom — an INTERNAL/eval tool, not part of the shipped `nub` binary.
#
# It is its OWN single-member Cargo workspace (like crates/nub-native), and is
# `exclude`d from the main workspace, for ONE reason: it depends on the full oxc
# parser (`oxc` with `features = ["full"]`). Baking that into the main workspace
# would pull oxc into the shipped `nub` CLI binary's build graph and every default
# `cargo build`/CI leg — a large compile the CLI never needs. Isolating it here
# keeps the `nub` binary lean and the main workspace's build unaffected; the tool
# is built explicitly on demand: `cargo build --manifest-path
# crates/nub-phantom/Cargo.toml --release`.
#
# The oxc pin is byte-identical to the main workspace / nub-native pin (=0.132.0)
# so the parse semantics match nub's own transpile/detect pipeline exactly.
[workspace]
members = ["."]
resolver = "3"

[package]
name = "nub-phantom"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/nubjs/nub"
publish = false

[lib]
name = "nub_phantom"
path = "src/lib.rs"

[[bin]]
name = "nub-phantom"
path = "src/main.rs"

[dependencies]
# The reachable-graph walk + classifier + manifest parser are shared with the
# shipped `nub` CLI via nub-phantom-scan (single source of truth — this eval tool
# must not re-diverge its own copies). It pulls the specifier/extraction
# primitives (nub-phantom-core) and the lean-oxc parser subset transitively, so
# this crate depends on neither `oxc` nor nub-phantom-core directly.
nub-phantom-scan = { path = "../nub-phantom-scan" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP fetch of registry metadata + tarballs. Mirrors the main workspace's
# reqwest feature set (blocking, rustls). gzip decodes the tarball transport.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
tar = "0.4"

[profile.release]
opt-level = 3
