[package]
name = "nub-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The OS-enforced sandbox ENGINE for nub — PM-PURE by construction (Boundary B):
# it takes only already-parsed data (a serde value + host-provided paths/env) and
# has ZERO dependency on nub-cli / nub-core / vendor/aube. This is what keeps the
# future build-jail embedder seam clean — aube's lifecycle.rs will wire to
# compile()/apply() without dragging any PM type across the boundary. Do NOT add a
# nub-cli/nub-core/aube dependency here; an impact-analysis review leg asserts the
# graph. See epics/sandbox/design.md §2 (the two boundaries).

[dependencies]
serde = { workspace = true }
# preserve_order is LOAD-BEARING: object-form fold (fold_fs/net/env) relies on
# SOURCE key order for last-match-wins, so `{ "~/.ssh": true, "~/**": false }`
# must evaluate in written order (a BTreeMap sort would flip the verdict). Declared
# locally so the guarantee is owned here, not inherited by accidental workspace
# feature unification.
serde_json = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
# Matcher stack: globset is ripgrep's glob engine (cross-platform path
# normalization + per-glob case flags); regex backs the env /regex/ grammar; ipnet
# parses net CIDRs. All already in the workspace lockfile (transitive) — no new
# supply-chain surface.
globset = "0.4"
regex = "1"
ipnet = { version = "2", features = ["serde"] }

# libc: macOS needs it (confstr scratch-dir lookup in the Seatbelt backend); Linux
# uses it in the Landlock/seccomp backend (prctl + the raw landlock ABI probe).
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { workspace = true }

# Landlock (fs read/write-confine) + seccompiler (net + ptrace-family syscall
# deny) back the Linux backend. Both are already in the workspace lockfile
# (transitive via vendor/aube) — no new supply-chain surface. Linux-only: the
# backend is `#[cfg(target_os = "linux")]`, so the OS-agnostic grant DERIVATION
# (linux_grants.rs, host-tested) references neither.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
