[package]
name = "nub-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The OS-enforced sandbox ENGINE for nub — PM-PURE by construction (Boundary B):
# it takes only already-parsed data (a serde value + host-provided paths/env) and
# has ZERO dependency on nub-cli / nub-core / vendor/aube. This is what keeps the
# future build-jail embedder seam clean — aube's lifecycle.rs will wire to
# compile()/apply() without dragging any PM type across the boundary. Do NOT add a
# nub-cli/nub-core/aube dependency here; an impact-analysis review leg asserts the
# graph. See epics/sandbox/design.md §2 (the two boundaries).

[dependencies]
serde = { workspace = true }
# preserve_order is LOAD-BEARING: object-form fold (fold_fs/net/env) relies on
# SOURCE key order for last-match-wins, so `{ "~/.ssh": true, "~/**": false }`
# must evaluate in written order (a BTreeMap sort would flip the verdict). Declared
# locally so the guarantee is owned here, not inherited by accidental workspace
# feature unification.
serde_json = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
# Matcher stack: globset is ripgrep's glob engine (cross-platform path
# normalization + per-glob case flags); regex backs the env /regex/ grammar; ipnet
# parses net CIDRs. All already in the workspace lockfile (transitive) — no new
# supply-chain surface.
globset = "0.4"
regex = "1"
ipnet = { version = "2", features = ["serde"] }

# libc: macOS needs it (confstr scratch-dir lookup in the Seatbelt backend); Linux
# uses it in the Landlock/seccomp backend (prctl + the raw landlock ABI probe).
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { workspace = true }

# Landlock (fs read/write-confine) + seccompiler (net + ptrace-family syscall
# deny) back the Linux backend. Both are already in the workspace lockfile
# (transitive via vendor/aube) — no new supply-chain surface. Linux-only: the
# backend is `#[cfg(target_os = "linux")]`, so the OS-agnostic grant DERIVATION
# (linux_grants.rs, host-tested) references neither.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

# windows-sys backs the Windows AppContainer backend: the LowBox launch
# (CreateProcessW + STARTUPINFOEX + SECURITY_CAPABILITIES), per-run inheritable
# allow-ACE grants (Get/SetNamedSecurityInfoW + SetEntriesInAclW), the
# CreateAppContainerProfile identity, and the Job-Object KILL_ON_JOB_CLOSE reap.
# 0.61 is already in the workspace lockfile (transitive via clap/anstyle) — no
# new supply-chain surface. Raw FFI (no COM), gated `#[cfg(target_os = "windows")]`.
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Isolation",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_System_Memory",
]

[dev-dependencies]
tempfile = "3"

# The Windows enforcement probe is BOTH the runner and the AppContainer child, so it
# needs a little FFI (token-query + process-liveness) beyond what the lib exposes.
[target.'cfg(target_os = "windows")'.dev-dependencies.windows-sys]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  # windows_adversarial.rs probes: ReadProcessMemory + VirtualQueryEx (foreign-env
  # scrape), CreateFileW (inheritable-file-handle probe), ConvertSidToStringSidW
  # (SID-string token dump for the capability/package-SID checks).
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_Storage_FileSystem",
  "Win32_Security_Authorization",
]

# The Windows enforcement probe self-reexecs as the AppContainer child, so it owns
# `main` (dispatch on argv) rather than the libtest harness. windows-latest CI only; a
# no-op `main` on other hosts.
[[test]]
name = "windows_enforcement"
harness = false

# The adversarial non-fs confinement probe (audit): attacks env-read / job-escape /
# capability / handle / egress axes against the REAL backend. Same self-reexec shape.
[[test]]
name = "windows_adversarial"
harness = false

[lints]
workspace = true
